--- a/styles-unidades.css
+++ b/styles-unidades.css
@@ -103,6 +103,14 @@
       display: none;
     }
   }
+  
+  /* Formulario para filtrar por categoría */
+  
+#select-form {
+  display: flex;
+  margin: 5px;
+  justify-content: right;
+}
 
   /* Unidades Main */
 
